--- a/flink-table-store-connector/pom.xml
+++ b/flink-table-store-connector/pom.xml
@@ -25,7 +25,7 @@ under the License.
     <parent>
         <artifactId>flink-table-store-parent</artifactId>
         <groupId>org.apache.flink</groupId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <artifactId>flink-table-store-connector</artifactId>
